[package]
name = "scrubby"
version = "0.7.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Remove or extract background taxa for metagenomic diagnostic applications"
documentation = "https://github.com/esteinig/scrubby"
homepage = "https://github.com/esteinig/scrubby"
repository = "https://github.com/esteinig/scrubby"
readme = "README.md"
keywords = ["meta-gp"]
categories = ["science"]
license = "MIT"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[dependencies]
anstyle = "1.0.7"
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive", "unstable-styles"] }
env_logger = "0.11.4"
log = "0.4.22"
needletail = "0.5.1"
serde = { version = "1.0.204", features = ["derive"] }
termcolor = "1.4.1"
thiserror = "1.0.63"


[[bin]]
name = "scrubby"
path = "src/main.rs"
