[package]
name = "scrubby"
version = "0.7.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Remove or extract background taxa for metagenomic diagnostic applications"
documentation = "https://github.com/esteinig/scrubby"
homepage = "https://github.com/esteinig/scrubby"
repository = "https://github.com/esteinig/scrubby"
readme = "README.md"
keywords = ["meta-gp"]
categories = ["science"]
license = "MIT"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[dependencies]
anstyle = "1.0.7"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.10", features = ["derive", "unstable-styles", "cargo"] }
env_logger = "0.11.4"
log = "0.4.22"
needletail = "0.5.1"
niffler = "2.5.0"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.10.1"
termcolor = "1.4.1"
thiserror = "1.0.63"

rust-htslib = "0.47.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
tar = "0.4.41"
csv = "1.3.0"
serde_json = "1.0.121"

minimap2 = { version = "0.1.20", optional = true }
crossbeam = { version = "0.8.4", optional = true }

[features]
default = []
mm2 = ["minimap2", "crossbeam"]

[[bin]]
name = "scrubby"
path = "src/main.rs"
