[package]
name = "scrubby"
version = "0.4.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Remove or extract background taxa for metagenomic diagnostic applications"
documentation = "https://github.com/esteinig/scrubby"
homepage = "https://github.com/esteinig/scrubby"
repository = "https://github.com/esteinig/scrubby"
readme = "README.md"
keywords = ["meta-gp", "scrubby", "cerebro", "host", "depletion"]
categories = ["science"]
license = "MIT"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[dependencies]
tar = "0.4.41"
csv = "1.3.0"
log = "0.4.22"
rayon = "1.10.0"
anyhow = "1.0.86"
chrono = "0.4.38"
anstyle = "1.0.7"
niffler = "2.5.0"
tempfile = "3.10.1"
termcolor = "1.4.1"
thiserror = "1.0.63"
needletail = "0.5.1"
env_logger = "0.11.4"
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.10", features = ["derive", "unstable-styles", "cargo"] }
reqwest = { version = "0.12.5", features = ["blocking", "native-tls-vendored"] }

tch = { version = "0.16.0", optional = true }
rust-htslib = { version = "0.47.0", optional = true }
minimap2 = { version = "0.1.20", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
default = []
mm2 = ["minimap2", "crossbeam"]
htslib = ["rust-htslib"]
nn = ["tch", "rand"]

[[bin]]
name = "scrubby"
path = "src/main.rs"
