[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrubby"
version = "1.0.0"
authors = [{name="Eike Steinig", email="eike.steinig@unimelb.edu.au"}]
description = "emove or extract background taxa for metagenomic diagnostic applicationscs"
readme = "README.md"
dependencies = [
  "tensorflow",
  "numpy",
  "typer",
  "biopython"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["scrubby*"] 
namespaces = false

[project.scripts]
scrubby-nn = "scrubby.terminal:app"

[tool.pytest.ini_options]
testpaths = [
    "tests/scrubby_nn",
]
addopts = "-v"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.github
  | \.secrets
  | _build
  | buck-out
  | build
  | dist
  | app
  | docker
  | scripts
)/
'''

